remove benjamindoe/bible-gateway

--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,7 @@
   "require" : {
     "silex/silex": "^2.0.4",
     "monolog/monolog": "^1.22",
-    "twig/twig": "^2.0",
-    "symfony/twig-bridge": "^3",
-    "benjamindoe/bible-gateway": "^0.0.1"
+    "symfony/twig-bridge": "^3"
   },
   "require-dev": {
     "heroku/heroku-buildpack-php": "*"
